# modem-inspector

./: .gitignore  README.md  main.py  modem_inspector_prd.md  noxfile.py  pyproject.toml  requirements.txt  test_mvp.py  test_nordic.yaml  test_parser_basic.py  test_quectel.yaml  test_simcom.yaml  test_template.yaml
docs/: gui_testing_guide.md  logging.md
examples/: json_reporter_demo.py  parser_integration_example.py
output/: filtered_report.json  low_confidence_report.json  unicode_report.json  validated_report.json
reports/: mvp_test_report.csv
src/: __init__.py
src/config/: __init__.py  config_cli.py  config_encryption.py  config_manager.py  config_models.py  config_schema.py  config_wizard.py  defaults.py
src/core/: __init__.py  at_executor.py  command_response.py  exceptions.py  multi_modem_executor.py  plugin.py  plugin_cli.py  plugin_generator.py  plugin_manager.py  plugin_parser.py  plugin_validator.py  serial_handler.py
src/gui/: __init__.py  application.py
src/gui/dialogs/: __init__.py  error_dialog.py  help_dialog.py  report_dialog.py  settings_dialog.py
src/gui/frames/: __init__.py  connection_frame.py  execution_frame.py  log_viewer_frame.py  plugin_frame.py  plugin_manager_frame.py  results_frame.py
src/gui/utils/: __init__.py  history_manager.py  threading_utils.py  validation.py
src/gui/widgets/: __init__.py  category_checklist.py  config_status_widget.py  port_selector.py  progress_log.py  status_indicator.py
src/logging/: __init__.py  communication_logger.py  file_handler.py  log_models.py
src/parsers/: __init__.py  base_parser.py  feature_extractor.py  feature_model.py  universal.py  vendor_specific.py
src/parsers/vendors/: __init__.py  nordic_parser.py  quectel_parser.py  simcom_parser.py
src/plugins/nordic/: nrf9160.yaml
src/plugins/quectel/lte_cat1/: ec200u.yaml
src/plugins/sample/: basic_modem.yaml
src/reports/: __init__.py  base_reporter.py  comparison_reporter.py  csv_reporter.py  html_reporter.py  json_reporter.py  markdown_reporter.py  report_generator.py  report_models.py
src/reports/templates/: default_html.j2  default_markdown.j2
src/schemas/: plugin_schema.json
tests/: __init__.py
tests/integration/: __init__.py  test_logging_integration.py  test_parser_at_integration.py
tests/integration/gui/: __init__.py  test_settings_dialog_integration.py
tests/unit/: __init__.py  test_at_executor.py  test_command_response.py  test_communication_logger.py  test_comparison_reporter.py  test_csv_reporter.py  test_exceptions.py  test_file_handler.py  test_html_reporter.py  test_json_reporter.py  test_log_models.py  test_markdown_reporter.py  test_multi_modem_executor.py  test_plugin.py  test_plugin_manager.py  test_plugin_parser.py  test_plugin_validator.py  test_report_generator.py  test_report_models.py  test_serial_handler.py
