[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modem-inspector"
version = "1.0.0"
description = "Enterprise-grade bandwidth management solution for OPNsense firewalls with comprehensive modem inspection capabilities"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Modem Inspector Team"},
]
keywords = [
    "modem",
    "at-commands",
    "serial",
    "cellular",
    "5g",
    "lte",
    "testing",
    "automation",
    "opnsense",
    "bandwidth-management"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Hardware",
    "Topic :: System :: Networking :: Firewalls",
    "Topic :: Utilities",
]

dependencies = [
    "pyserial>=3.5",
    "pyyaml>=6.0",
    "customtkinter>=5.0.0",
    "jsonschema>=4.0.0",
    "watchdog>=3.0.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "nox>=2023.0.0",
]

gui = [
    "customtkinter>=5.0.0",
    "matplotlib>=3.5.0",
]

cli = [
    "cmd2>=2.4.0",
    "rich>=13.0.0",
]

api = [
    "fastapi>=0.95.0",
    "uvicorn>=0.20.0",
]

monitoring = [
    "psutil>=5.9.0",
]

security = [
    "cryptography>=40.0.0",
]

all = [
    "modem-inspector[dev,gui,cli,api,monitoring,security]",
]

[project.urls]
Homepage = "https://github.com/modem-inspector/modem-inspector"
Documentation = "https://github.com/modem-inspector/modem-inspector/blob/main/README.md"
Repository = "https://github.com/modem-inspector/modem-inspector"
"Bug Tracker" = "https://github.com/modem-inspector/modem-inspector/issues"

[project.scripts]
modem-inspector = "main:main"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = ["schemas/*.json", "plugins/**/*.yaml", "reports/templates/*.j2"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "gui: GUI tests (may require display)",
    "hardware: Tests requiring real hardware",
    "slow: Slow running tests",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E266", "E501", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".venv",
    ".tox",
    ".mypy_cache",
    ".pytest_cache",
]
per-file-ignores = [
    "__init__.py:F401",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
